--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ requirements:
     - python
     - pip
     - wheel
+    - setuptools
   run:
     - python
     - pypandoc
@@ -42,4 +43,4 @@ about:
 
 extra:
   recipe-maintainers:
-    - snegireff
+    - nicoddemus
